<resources>
    <string name="app_name">ShreededApp</string>
    <string name="action_settings">Settings</string>
    <string name="home_header">Welcome to Shredded App</string>
    <string name="home_info">Please pick one of the following body parts</string>
    <string name="home_back">Back</string>
    <string name="home_arms">Arms</string>
    <string name="home_chest">Chest</string>
    <string name="home_legs">Legs</string>
    <string name="imageBack"></string>
    <string name="imageArms"></string>
    <string name="imageChest"></string>
    <string name="imageLegs"></string>

    <string name="title_activity_back_workout">BackWorkout</string>
    <string name="chest_workout">Chest Workout</string>
    <string name="arm_workout">Arm Workout</string>
    <string name="leg_workout">Leg Workout</string>
    <string name="back_workout">Back Workout</string>
    <string name="bring_you_to_back_workout">Bring you to back workout</string>
    <string name="bring_you_to_leg_workout">Bring you to leg workout</string>
    <string name="bring_you_to_arm_wotkout">Bring you to arm wotkout</string>
    <string name="bring_you_to_chest_workout">Bring you to chest workout</string>
    <string name="title_activity_leg_workout">LegWorkout</string>
    <string name="title_activity_arms_workout">ArmsWorkout</string>
    <string name="title_activity_chest_workout">ChestWorkout</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="put_in_your_own_workouts_in_one_of_the_following_categories_below">Put in your own workouts in one of the following categories below</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="enter_password">enter_password</string>
    <string name="signup">Signup</string>
    <string name="enter_email">Enter email</string>


    <string name="slogan">Hustle for that muscle baby</string>


    <array name="name">
        <item>Back Workout</item>
        <item>Chest Workout</item>
        <item>Leg Workout</item>
        <item>Arm Workout</item>


    </array>
    <string name="title_activity_maps">Map</string>


</resources>
