<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a20076515.shreededapp.MainPage"
    tools:showIn="@layout/activity_main_page">


    <TextView
        android:id="@+id/home_header"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:text="@string/home_header"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#ffffff"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/home_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/put_in_your_own_workouts_in_one_of_the_following_categories_below"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />



    <!--Got help for FrameLayout from here https://stackoverflow.com/questions/4457030/how-to-show-the-text-on-a-imagebutton-->

    <FrameLayout android:layout_height="103dp"
    android:layout_width="462dp"
    android:layout_marginBottom="220dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.27"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.237">
    <ImageButton
        android:id="@+id/image_Back"
        android:layout_width="450dp"
        android:layout_height="103dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:srcCompat="@drawable/back"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/bring_you_to_back_workout" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center"
            android:textSize="17sp"
            android:clickable="false"
            android:text="@string/back_workout"
            android:textColor="#ffffff" />
</FrameLayout>






    <FrameLayout android:layout_width="458dp"
        android:layout_height="102dp"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451"
        android:layout_marginRight="8dp">
        <ImageButton
            android:id="@+id/image_Legs"
            android:layout_width="450dp"
            android:layout_height="103dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.237"
            app:srcCompat="@drawable/legs"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/bring_you_to_leg_workout" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center"
            android:textSize="17sp"
            android:clickable="false"
            android:text="@string/leg_workout"
            android:textColor="#ffffff" />
    </FrameLayout>




    <FrameLayout android:layout_width="474dp"
        android:layout_height="101dp"
        android:layout_marginBottom="135dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">
        <ImageButton
            android:id="@+id/image_Arms"
            android:layout_width="474dp"
            android:layout_height="101dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997"
            app:srcCompat="@drawable/arms"
            android:contentDescription="@string/bring_you_to_arm_wotkout" />

        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center"
            android:textSize="17sp"
            android:clickable="false"
            android:text="@string/arm_workout"
            android:textColor="#ffffff" />
    </FrameLayout>




    <FrameLayout         android:layout_width="459dp"
        android:layout_height="101dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        android:layout_marginRight="8dp">
        <ImageButton
            android:id="@+id/image_Chest"
            android:layout_width="459dp"
            android:layout_height="101dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.66"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.866"
            app:srcCompat="@drawable/chest"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/bring_you_to_chest_workout" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center"
            android:textSize="17sp"
            android:clickable="false"
            android:text="@string/chest_workout"
            android:textColor="#ffffff" />

    </FrameLayout>

    <Button
        android:id="@+id/buttonMaps"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_background"
        android:text="Map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_background"
        android:gravity="center"
        android:text="Logout"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />


</android.support.constraint.ConstraintLayout>
